service/aks/dev/app.namespace-dev.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: gcd-dev
  labels:
    product: gcd
    vault: enabled
