service/aks/dev/app.deployment-dev.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations: null
  name: integration-dev
  namespace: gcd-dev
spec:
  replicas: 2
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      release: integration-dev
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 2
  template:
    metadata:
      labels:
        release: integration-dev
        environment: dev
      name: integration-dev
      annotations:
        vault.security.banzaicloud.io/vault-addr: "https://vault.maersk-digital.net"
        vault.security.banzaicloud.io/vault-skip-verify: "true"
        vault.security.banzaicloud.io/vault-role: "gcd-dev"
        vault.security.banzaicloud.io/vault-path: "core-dev-west-1"
    spec:
      hostname: integration-dev
      imagePullSecrets:
      - name: maerskao
      containers:
      - name: api
        image: maerskao.azurecr.io/gcd/integration:_IMAGE_TAG_
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
          name: api-port
        resources:
          requests:
            cpu: 100m
            memory: 1024Mi
          limits:
            cpu: 200m
            memory: 2048Mi   
---

apiVersion: v1
kind: Service
metadata:
  name: integration-dev
  labels:
    release: integration-dev
    environment: dev
spec:
  type: ClusterIP
  selector:
    release: integration-dev
  ports:
  - port: 8081
    targetPort: 8080
